# one-space

./: README.md  TODO.md  codex_prompt.txt  en_keys.txt  gemini_prompt.txt  index.html  onespace_philosophy.md  package-lock.json  package.json  tailwind.config.js  update_i18n.cjs  vite.config.ts  zh_keys.txt
.codex/skills/onespace-release/: SKILL.md
.github/workflows/: release.yml
docs/: CLI.md  MCP.md  SKILLS.md  USAGE.md
skills/onespace-release/: SKILL.md
skills/onespace-release/agents/: openai.yaml
skills/onespace-release/references/: release-files.md
skills/onespace-release/scripts/: release_tool.py
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_env.rs  ai_sessions.rs  app_store.rs  backup.rs  cli_probe.rs  config.rs  config_conflict.rs  crypto.rs  git.rs  lib.rs  main.rs  mcp_export.rs  mcp_servers.rs  mcp_templates.rs  proxy.rs  secrets.rs  skills.rs  storage.rs  version_detect.rs
src/components/: AboutModal.tsx  AiEnvironmentsTab.tsx  AiSessions.tsx  AiWorkspace.tsx  BackupManager.tsx  Bookmarks.tsx  CliInstallation.tsx  CloudDrive.tsx  ConfirmDialogProvider.tsx  Documentation.tsx  FishPond.tsx  Launcher.tsx  MCPImportExport.tsx  Mail.tsx  Notes.tsx  OmniSearch.tsx  OnboardingWizard.tsx  QuickAiSessionBar.tsx  SettingsModal.tsx  SettingsView.tsx  Snippets.tsx  SshServers.tsx  skillsModelOptions.ts
src/components/AiEnvironments/: icons.tsx  index.tsx
src/lib/: gmail.ts  updater.ts
(+17 files in other folders)
