[package]
name = "OneSpace"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "onespace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
ssh_cfg = "0.3.0"
dirs = "6.0.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "=2.3.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-oauth = "2.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-opener = "2.5.3"
toml_edit = "0.25.3"
regex = "1.12.3"
hostname = "0.4.2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
